--- a/assets/Css/main.css
+++ b/assets/Css/main.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=main.css.map */
+.card-size {
+  height: 300px;
+}
+.card-size img {
+  height: 100%;
+  width: 100%;
+}/*# sourceMappingURL=main.css.map */
