--- a/assets/Css/main.css
+++ b/assets/Css/main.css
@@ -4,4 +4,7 @@
 .card-size img {
   height: 100%;
   width: 100%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }/*# sourceMappingURL=main.css.map */
