bg-fixedfor-chrome-browser

--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -5,7 +5,7 @@
 }
 
 .bg-wallpaper{
-    background-image: url('/assets/Img/1680x1050-px-3D-abstract-ART-artistic-bright-1496729-wallhere.com.jpg');
+    background-image: URL('../Img/1680x1050-px-3D-abstract-ART-artistic-bright-1496729-wallhere.com.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     
